# mlops_cicd

./: .coverage  README.md
mlops-cicd/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
mlops-cicd/.github/: ci.yml
mlops-cicd/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
mlops-cicd/catboost_info/learn/: events.out.tfevents
mlops-cicd/catboost_info/test/: events.out.tfevents
mlops-cicd/conf/base/: catalog.yml  parameters.yml  parameters_feature_engineering.yml  parameters_model_training.yml
mlops-cicd/notebooks/: notebook.ipynb
mlops-cicd/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mlops-cicd/notebooks/catboost_info/learn/: events.out.tfevents
mlops-cicd/notebooks/mlruns/0/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/075495896e5f48659cd3e45d47c8d6bc/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/075495896e5f48659cd3e45d47c8d6bc/tags/: mlflow.runName
mlops-cicd/notebooks/mlruns/183277257266205382/4605fa52d35b483d8f1bcf89280b5de6/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/4605fa52d35b483d8f1bcf89280b5de6/tags/: mlflow.runName  mlflow.source.name
mlops-cicd/notebooks/mlruns/183277257266205382/47674560ddbb4c8280664f5576230e84/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/47674560ddbb4c8280664f5576230e84/tags/: mlflow.runName  mlflow.source.name
mlops-cicd/notebooks/mlruns/183277257266205382/512612842b86494388b16026368d0ab7/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/512612842b86494388b16026368d0ab7/metrics/: acc_test  acc_train  auc_test  auc_train  f1_score_test  (+1 more)
mlops-cicd/notebooks/mlruns/183277257266205382/66a6ff8db6834850a273732c4bda0315/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/6f895c10f38f442980fcc66bc7e0020e/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/c3a957653d8b4e82872841778bd42122/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/dd5d1c18f9184373b63d72f50d197e90/: meta.yaml
mlops-cicd/notebooks/mlruns/183277257266205382/f7b6f40e9fac44c18b2e1d49202969b2/: meta.yaml
mlops-cicd/src/mlops_cicd/: __init__.py  __main__.py  settings.py
mlops-cicd/src/mlops_cicd/pipelines/feature_engineering/: nodes.py  pipeline.py
mlops-cicd/src/mlops_cicd/pipelines/model_training/: nodes.py  pipeline.py  tools.py
mlops-cicd/tests/pipelines/feature_engineering/: test_pipeline.py
(+51 files in other folders)
