[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "mlops_cicd"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.14",]

[project.scripts]
mlops-cicd = "mlops_cicd.__main__:main"

[tool.kedro]
package_name = "mlops_cicd"
project_name = "mlops_cicd"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "mlops_cicd.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "8f203a20f3cc491eada42db85ea3443b"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/mlops_cicd -ra"
